# eu_jobsmith

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  README.zh-TW.md  desktop.bat  desktop.py  pyproject.toml  requirements.txt  run.bat  setup.bat  setup.sh
.github/workflows/: macos-unsigned.yml
app/: cli.py  graph.py  llm.py  llm_cli.py  models.py  server.py  settings.py  state.py
app/agents/: company.py  cover_letter.py  interview.py  interview_sim.py  job_search.py  match.py  presentation_eval.py  resume_eval.py  skill_gap.py
app/export/: docx_export.py
app/intake/: jd_fetch.py  resume_parser.py
app/sources/: regions.py  registry.py  source_104.py  source_indeed.py  source_linkedin.py  source_xing.py
app/store/: db.py  history.py  presentation_checks.py  resume_checks.py
app/tools/: search.py
data/: demo_profile.json  fallback_jobs.json
docs/: PRIVACY.md  RELEASE_CHECKLIST.md
docs/release_qa/: v0.1.0-initial-qa.md
docs/superpowers/plans/: 2026-06-23-taiwan-ai-job-copilot-m4.md  2026-06-23-taiwan-ai-job-copilot-m5.md  2026-06-24-product-grade-m10.md  2026-06-24-product-grade-m11.md
docs/superpowers/specs/: 2026-06-23-taiwan-ai-job-copilot-v2-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  i18n.ts  main.tsx  types.ts
frontend/src/components/: BackendSelector.tsx  (+6 more)
tests/: conftest.py  test_company.py  test_docx_export.py  test_graph.py  test_history.py  test_job_search.py  test_llm_backend.py  test_llm_cli.py  test_match.py  test_models.py  test_resume_checks.py  test_resume_eval.py  test_resume_parser.py  test_search.py  test_security_regressions.py  test_server.py  test_skill_gap.py  test_sources.py
tmp_save/: ResumeHealthView.tsx  source_indeed.py  source_xing.py  useBackend.ts
(+19 files in other folders)
