[project]
name = "taiwan-ai-job-copilot"
version = "0.1.0"
description = "A local-first, multi-agent job-search co-pilot for the Taiwan market — find jobs, audit your résumé, generate tailored application packages, and run mock interviews."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "kevin33335313" }]
keywords = ["langgraph", "multi-agent", "job-search", "llm", "taiwan", "resume", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Natural Language :: Chinese (Traditional)",
]
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-anthropic>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
desktop = ["pywebview>=5.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/kevin333353/taiwan-ai-job-copilot"
Repository = "https://github.com/kevin333353/taiwan-ai-job-copilot"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "live: 會真正呼叫 Anthropic API 的測試（預設略過，需 -m live 才跑）",
]
addopts = "-m 'not live'"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
